--- a/Inventories_UsuarioAnsible/nginx.conf.j2
+++ b/Inventories_UsuarioAnsible/nginx.conf.j2
@@ -28,8 +28,8 @@ http {
     server {
         listen 443 ssl http2;
         server_name serverb;
-        #ssl_certificate {{ ssl_cert }};
-        #ssl_certificate_key {{ ssl_key }};
+        #ssl_certificate /etc/nginx/ssl/nginx-selfsigned.crt;
+        #ssl_certificate_key /etc/nginx/ssl/nginx-selfsigned.key;
         #ssl_protocols TLSv1.2 TLSv1.3;
         #ssl_prefer_server_ciphers on;
 
